# polygon-offset

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
input/: circle_m01.json  circle_p01.json  flower_p05.json
output/: circle_m01-output_polygon.gnuplot  circle_m01.gnuplot  circle_p01-input_polygon.gnuplot  circle_p01-output_polygon.gnuplot  circle_p01.gnuplot  flower_p05-input_polygon.gnuplot  flower_p05-output_polygon.gnuplot  flower_p05.gnuplot  normals.gnuplot  plot.gnuplot
src/: CMakeLists.txt  intersection.cpp  intersection.h  line.cpp  line.h  offset.cpp  offset.h  polygon.cpp  polygon.h  segment.cpp  segment.h  vector2d.cpp  vector2d.h
tests/: CMakeLists.txt  offsetTests.cpp  paths.h
tools/cmake/: add-tests.cmake  helper-functions.cmake
